# llm-inclass

./: .coverage_local  .gitignore  .gitmodules  AGENTS.md  README.md  bad_loop.py  chat.py  endpoint.py  llm_client.py  main.py  pyproject.toml  requirements.txt  sample.txt
.github/workflows/: doctests.yml  flake8.yml  integration-tests.yml
docs/: README.md  demo.mov
test_projects/: README.md
tools/: __init__.py  calculate.py  cat_tool.py  compact_tool.py  doctests_tool.py  grep_tool.py  is_path_safe.py  load_image_tool.py  ls_tool.py  pip_install_tool.py  rm_tool.py  write_file_tool.py  write_files_tool.py
