[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmc-csci040-annaryan"
version = "0.1.1"
description = "CLI document chat agent with local tool use"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["groq", "openai", "python-dotenv", "GitPython"]

[project.scripts]
chat = "chat:run_cli"

[tool.setuptools]
py-modules = ["chat"]
packages = ["tools"]
